<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_autonomous_robot</name>
  <version>0.0.0</version>
  <description>CEN449 Project with TurtleBot3</description>
  <maintainer email="abdurrahmangulmez44@gmail.com">Abdurrahman</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>explore_lite</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>